k8s/sling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sling
  labels:
    app: sling
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sling
  template:
    metadata:
      labels:
        app: sling
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: sling
        image: registry.homelab.lmn.ro/apache/sling-cloud-native:1.0-demo-006-caching
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        volumeMounts:
        - name: datastore
          mountPath: /mnt/datastore
      volumes:
      - name: datastore
        persistentVolumeClaim:
          claimName: sling-datastore

---

kind: Service
apiVersion: v1
metadata:
  name: sling
spec:
  selector:
    app: sling
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sling
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    # set sticky sessions via cookie
    nginx.ingress.kubernetes.io/affinity: "cookie"
    # Enable server-side includes
    nginx.ingress.kubernetes.io/configuration-snippet: |
        ssi on;
spec:
  tls:
    - secretName: homelab.lmn.ro
  rules:
  - host: sling-starter.homelab.lmn.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: sling
          servicePort: 80
